added last 2 collections, OAuth, and tests
